// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`attributes.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<Foo foo={{color:     'red'}}></Foo>
<Foo foo={{
color:     'red'}}></Foo>
<Foo foo={{color:    /** @type {'red'} */('red')}}></Foo>

=====================================output=====================================
<Foo foo={{ color: "red" }}></Foo>
<Foo
  foo={{
    color: "red",
  }}
></Foo>
<Foo foo={{ color: /** @type {'red'} */ ("red") }}></Foo>

================================================================================
`;

exports[`empty.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<C
  a1
  a2=""
  a3=''
  a4=' '
  a4='&nbsp;'
/>

=====================================output=====================================
<C a1 a2="" a3="" a4=" " a4="&nbsp;" />

================================================================================
`;

exports[`encoded.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<C
  a1="&amp;"
  a2="&gt;"
  a3="&amp;gt;"
/>

<C a="&lt;x&gt;" />

<C a="&amp;lt;" />

=====================================output=====================================
<C a1="&amp;" a2="&gt;" a3="&amp;gt;" />

<C a="&lt;x&gt;" />

<C a="&amp;lt;" />

================================================================================
`;
